# Spiralator

./: Chip_2024Q1.py  Chip_KIFM_Series3A_v1.py  Chip_KIFM_Series3B_v1.py  Chip_KIFM_Series3B_v2.py  Chip_KIFM_Series3_1_v3.py  Chip_KIFM_Series3_v1.py  Chip_sub_test.py  MultiChip_2024Q1.py  MultiChip_2024Q1V.py  MultiChip_C2024Q1_AE.py  MultiChip_test.py  README.md  conf_help.afdesign  core.py  klayout_settings.lyp  path_test.gds  pyproject.toml  test_test.gds
GDS/: Chip_2024Q1.gds  KIFM_Ser3_Mdl-A.gds  MultiChip_2024Q1.gds  MultiChip_2024Q1H_A.gds  MultiChip_2024Q1V_A.gds  MultiChip_2024Q1_A.gds  MultiChip_2024Q1_B.gds  MultiChip_2024Q1_C.gds  MultiChip_2024Q1_D.gds  MultiChip_2024Q1_E.gds  chip_2024Q1_A.gds  chip_2024Q1_B.gds  chip_2024Q1_C.gds  chip_2024Q1_D.gds  chip_2024Q1_E.gds  test.gds
GDS_2/: KIFM_Ser-3.1_Mdl-C.gds  KIFM_Ser-3.1_Tr1_Mdl-C.gds  KIFM_Ser-3.1_Tr2_Mdl-C.gds  KIFM_Ser-3.2_Mdl-A_v2.gds  KIFM_Ser-3.2_Mdl-B_v2.gds  KIFM_Ser-3.2_Mdl-C_v2.gds  KIFM_Ser-3A_Mdl-A.gds  KIFM_Ser-3A_Mdl-B.gds  KIFM_Ser-3A_Mdl-C.gds  KIFM_Ser-3_Mdl-A.gds  KIFM_Ser-3_Mdl-B.gds  KIFM_Ser-3_Mdl-C.gds  KIFM_Ser3_Mdl-A.gds
designs/: C2023.json  C2024Q1.json  C2024Q1_AusfB.json  C2024Q1_AusfC.json  KIFM_Ser3_1_Tr2_v3.json  KIFM_Ser3_test.json  KIFM_Ser3_v1.json  KIFM_Ser3_v2.json  MC-2024Q1H-D2-AusfA.json  MC-2024Q1V-D1-AusfA.json  MC-2024Q1V-D2-AusfA.json  MC-2024Q1V-D3-AusfA.json  configuration_commented.json
scirpts/: Chip_2024Q1_AE.py  Chip_KIFM_Series3_2_v1.py  Chip_minimum.py  MultiChip_2024Q1H.py  MultiChip_2024Q1V.py  MultiChip_C2024Q1_AE.py
tests/: buffalo_v1.gds  (+8 more)
(+65 files in other folders)
