[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spiralator"
version = "0.0.0.dev1"
authors = [
  { name="Grant Giesbrecht", email="grant.giesbrecht@colorado.edu" },
]
description = ""
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
	'numpy >= 1.0.0'
]

[project.urls]
Homepage = "https://github.com/Grant-Giesbrecht/spiralator"
Issues = "https://github.com/Grant-Giesbrecht/spiralator/issues"